# embedding-demo

./: README.md  local.sql  spin.toml  todo.txt
assets/: db_scheme.sql  index.html  script.js  text.json
dev/: db_scheme.sql  migrations_vss.sql  query.json  text.json
embeddings/: Cargo.toml
embeddings/src/: lib.rs
