[package]
name = "embeddings"
authors = ["Mikkel Mørk Hegnhøj <mikkel@fermyon.com>"]
description = "API to generate embeddings and store them in a database"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
log = "0.4"
env_logger = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0.26", features = ["derive"] }
bincode = "1.3.3"
[workspace]
